[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssc-weekly-planner"
version = "1.0.0"
description = "Smart study planner dashboard for SSC exam preparation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit==1.28.1",
    "requests==2.31.0",
]

[tool.setuptools]
packages = ["ssc_weekly_planner"]
